test: update HoldingTest to use getFirst() for retrieving the remaining lot